@@ -1,3 +1,8 @@
+2006-05-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* doc/en/dcwaterdesign.xml: More comprehensive INP file import
+	description
+	
 2006-05-24  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* dcwatdes.view.popup.pipes.seteconomicdiameter.ave: 
